k8s/apps/tools/mazanoke/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mazanoke
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mazanoke
  namespace: mazanoke
  labels:
    app.kubernetes.io/name: mazanoke
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mazanoke
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mazanoke
    spec:
      containers:
        - name: mazanoke
          image: ghcr.io/civilblur/mazanoke:v1.1.6@sha256:92cc7474deb789af6549318563b7a9ee750131f9f7b297cc9c87ab67e656c22c
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            requests:
              memory: "32Mi"
              cpu: "25m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: mazanoke
  namespace: mazanoke
  annotations:
    gatus.home-operations.com/endpoint: |
      alerts:
        - type: pushover
spec:
  selector:
    app.kubernetes.io/name: mazanoke
  ports:
    - port: 80
      targetPort: 80
      name: http
